--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '30 0 * * 1,4'
+    - cron:  '30 8 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
